--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,12 @@
   {% bootstrap_css %}
   {% bootstrap_javascript %}
   <link rel="shortcut icon" type="image/jpg" href="{% static 'AdVanceLogo.jpg' %}" >
+  <link rel="stylesheet" href="{% static 'custom_slider.css' %}">
+  <link rel="stylesheet" href="{% static 'css/listing_detail.css' %}">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 
 
