--- a/listings/templates/upload_listing.html
+++ b/listings/templates/upload_listing.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 
-{% load crispy_forms_tags %} 
+{% load crispy_forms_tags %}
+
 {% block content %}
+
 <blockquote class="blockquote text-center" style="margin-top:100px;">
   <h2>Upload a new listing:</h2>
 </blockquote>
+
+<!-- DjangoModelForm to upload new listing -->
 <form method = "post" enctype="multipart/form-data">
   {% csrf_token %}
-  {{ form|crispy }}
+  {{ listing_form|crispy }}
+  {{ image_form|crispy }}
   <button  class="btn btn-success" type="submit">Upload</button>
 </form>
+
 {% endblock %}
