Update NavUI & Datastructure

--- a/advance_realestate/templates/home.html
+++ b/advance_realestate/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-<blockquote class="blockquote text-center" style="margin-top:100px;">
+<blockquote class="blockquote text-center">
   <h1>AdVance RealEstate</h1>
   <p class="mb-0">"Begin your journey to Omaha's finest homes with us today"</p>
 </br></br><p class="lead">Explore this weeks feature:</p>
