--- a/listings/templates/upload_listing.html
+++ b/listings/templates/upload_listing.html
@@ -12,6 +12,7 @@
 <form method = "post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ listing_form|crispy }}
+  {{ address_form|crispy }}
   {{ image_form|crispy }}
   <button  class="btn btn-success" type="submit">Upload</button>
 </form>
