--- a/templates/base.html
+++ b/templates/base.html
@@ -1,93 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>AdVance RealEstate</title>
-  {% load bootstrap5 %}
-  {% load bootstrap_icons %}
-  {% load static %}
-  {% bootstrap_css %}
-  {% bootstrap_javascript %}
-  <link rel="shortcut icon" type="image/jpg" href="{% static 'AdVanceLogo.jpg' %}" >
-  <link rel="stylesheet" href="{% static 'css/listing_detail.css' %}">
-</head>
+  <head>
+    <title>AdVance RealEstate</title>
+    {% load bootstrap5 %}
+    {% load bootstrap_icons %}
+    {% load static %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+    <link rel="shortcut icon" type="image/jpg" href="{% static 'AdVanceLogo.jpg' %}" >
+    <link rel="stylesheet" href="{% static 'css/listing_detail.css' %}">
+  </head>
 
+  <nav class="navbar fixed-top" style="background-color: white; padding: 0; border-bottom: 1px solid white">
+    <div class="container-fluid" style="background-color: #055831; height: 35px;">
 
-<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src={% static 'AdVanceLogo.jpg' %} height="30" alt="" loading="lazy" />
-      </a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/listings">Listings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/area">Omaha</a>
-          </li>          
-        </ul>
-
-
-        {% if user.is_authenticated %}
-        <div class="d-flex align-items-center">
-            <form action="/accounts/logout" method="get">
-                <button type="submit" class="btn btn-outline-secondary me-3">
-                Logout
-                </button>
-            </form>
+      {% if user.is_authenticated %}
+        <div class="d-flex align-items-center" style="margin-left: auto">
+          <form action="/report/" method="get">
+            <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+              Filter report
+            </button>
+          </form> 
+          <form action="/listings/upload/" method="get">
+            <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+              Upload listing
+            </button>
+          </form> 
+          <form action="/accounts/logout" method="get">
+            <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+              Logout
+            </button>
+          </form>
         </div>
         {% else %}
-        <div class="d-flex align-items-center">
-            <form action="/accounts/login" method="get">
-                <button type="submit" class="btn btn-secondary me-3">
-                Login
-                </button>
-            </form>
+        <div class="d-flex align-items-center" style="margin-left: auto">
+          <form action="/accounts/login" method="get">
+              <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+              Login
+              </button>
+          </form> 
         </div>
-        {% endif %}
-      </div>
+      {% endif %}
+
+    </div>
+    <div class="container-fluid" style="padding: 0">
+      <nav class="navbar navbar-expand navbar-light" style="width: 100%; padding: 0">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <img src={% static 'AdVanceLogo.jpg' %} height="30" alt="" loading="lazy" />
+          </a>
+          <a class="navbar-brand" href="#"><h3 style="margin: 0;">Advance Home Real Estate</h3></a>
+
+          
+          <ul class="navbar-nav" style="margin-left: auto;">
+            <li class="nav-item">
+              <a class="nav-link" href="/"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">Home</button></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/listings"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">Explore Properties</button></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/about"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">About Us</button></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/area"><button type="button" class="btn btn-light" style="background-color: #CCCCCC">Explore Omaha</button></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
   </nav>
 
-<body>
-    <div class="container perscont">
-        {% block content %}
-        {% endblock %}
-    </div>
-
-
-
-    {% if user.is_authenticated and request.get_full_path == "/listings/"%}
-    <a href="/listings/upload" class="float">{% bs_icon 'plus' size="40px" extra_classes="floatbtt" %}</a>
-    {% endif %}
-</body>
+  <body>
+      <div class="container perscont" style="margin-top:130px;">
+          {% block content %}
+          {% endblock %}
+      </div>
+  </body>
 </html>
-
-
-
-
-<style>
-    .float{
-        position:fixed;
-        width:60px;
-        height:60px;
-        bottom:40px;
-        right:40px;
-        background-color:#0C9;
-        color:#FFF;
-        border-radius:50px;
-    }
-    .floatbtt{
-        margin-top:10px;
-        margin-left:10px;
-    }
-    .perscont{
-        margin-top:70px;
-    }
-</style>
