--- a/advance_realestate/templates/home.html
+++ b/advance_realestate/templates/home.html
@@ -1,59 +1,72 @@
 {% extends "base.html" %}
 {% block content %}
 
-
-<blockquote class="blockquote text-center">
-  <h1>AdVance RealEstate</h1>
-  <p class="mb-0">"Begin your journey to Omaha's finest homes with us today"</p>
-</br></br><p class="lead">Explore this weeks feature:</p>
-</blockquote>
-
-
-
-{% if listing_featured %}
-  <div class="col-lg-6" style="margin:auto;">
-    <div class="card">
-
-      <!-- Bootstrap Carousel for property images -->
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          {% for img in image_urls %}
-            {% if forloop.first %}
-              <div class="carousel-item active" style="max-width:900px; height:400px !important;">
-            {% else %}
-              <div class="carousel-item" style="max-width:900px; height:400px !important;">
-            {% endif %}
-            <img
-              src="../media/{{ img }}"
-              class="card-img-top"
-              alt="{{ listing_featured.property_title }}"
-            />
-            </div>  
-          {% endfor %}
+<head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+</head>
+<br>
+<br>
+<body>
+  {% if listing_featured %}
+    <div class="container text-center" style="max-height: 480px;background-color: #065834;">
+      <div class="row">
+        <div class="col">
+        <div class="row" style="padding-left: 12px;padding-right: 12px">
+          <div>
+            <!-- Bootstrap Carousel for property images -->
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                {% for img in image_urls %}
+                  {% if forloop.first %}
+                    <div class="carousel-item active" style="width:800px; height:460px !important;">
+                  {% else %}
+                    <div class="carousel-item" style="width:800px; height:460px !important;">
+                  {% endif %}
+                    <br>
+                  <img
+                    src="../media/{{ img }}"
+                    class="card-img-top"
+                    alt="{{ listing_featured.property_title }}"
+                  />
+                  </div>
+                {% endfor %}
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+        <div>
 
-      <!-- Further details on featured listing -->
-      <div class="card-body">
-        <h5 class="card-title">{{ listing_featured.property_title }}</h5>
-        <p class="card-text">
-          {{ listing_featured.property_description }}
-        </p>
-        <a href="/listing/{{ listing_featured.id }}" class="btn btn-outline-secondary">Details</a>
+
+
+            <div class="row" style="padding-bottom: 10px;margin-top: 20px;margin-bottom: 10px;background-color: #065834">
+
+  <div class="btn-group" role="group" aria-label="Basic example"  >
+
+      <button style="padding: 8px 8px;margin-left: 21%;font-size: small;background-color: white"><a  style="font-family: sans-serif;text-decoration: none; color: #828383 ;font-weight: 600" href="/listing/{{ listing_featured.id }}">Interested in the featured property? &nbsp;&nbsp;&nbsp;&nbsp;</a></button>
+      <button type="button" style="font-size: small;color: #fdfdfd;background-color: #414045;margin-right: 15%"><a style="text-decoration: none;color: white; font-weight: 600;font-family: sans-serif" href="/listing/{{ listing_featured.id }}" >Click here for more details!</a></button>
+
+</div>
+
+            </div>
+
+        </div>
+        </div>
+        <div class="col" style="background-color: white;padding-top: 20px">
+          <h2 style="color: #055831;padding-left: 10%; font-weight: 600;font-size: 20px; text-align: left">DISCOVER YOUR DREAM HOME TODAY! <br> <br> <br> <br>Welcome to AdVance Real Estate,<br> where we turn your dream of the <br>perfect home into a reality!<br></h2>
+          <h2 style="font-weight: 600;padding-left:10%;font-size: 20px; text-align: left">Browse our expertly selected<br> selection of homes and apartments</h2>
+        </div>
       </div>
     </div>
-  </div>
-
-{% else %}
-  <p>No feature found for this week.</p>
-{% endif %}
-
+  {% else %}
+    <p>No feature found for this week.</p>
+  {% endif %}
+</body>
 {% endblock %}
