--- a/advance_realestate/templates/about-us.html
+++ b/advance_realestate/templates/about-us.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <blockquote class="blockquote text-center" style="margin-top:100px;">
-<class lang="en">
-<head>
+<img lang="en">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -19,10 +19,6 @@
             background-color: white;
             padding: 10px;
             min-height: 100%;
-
-
-
-
         }
 
         #text-container {
@@ -65,23 +61,40 @@
         .button:hover {
             background-color: #45a049; /* Darker green background color */
 
+          .button {
+          background-color: black;
+          color:white;
+              float: right;
+
+           }
+          p {
+  margin-left: 50px;
+}
+
     </style>
 
-</head>
-<.button>
-    < id="container">
+    <div >
 
-         <img src="https://na.rdcpix.com/c35625211cd67678ffb6c3afaa32f795w-c3171719007rd-w832_h468_r4_q80.webp" alt="W3Schools.com" style="width:400px;height:400px;">
+           <p align="left"><b>Real Estate Agent- Madison Vance </b></p>
+    <img src="https://na.rdcpix.com/c35625211cd67678ffb6c3afaa32f795w-c3171719007rd-w832_h468_r4_q80.webp"  alt="Some Text" style="width:400px;height:400px;">
 
-            <p align="left">Meet Madison Vance, a vibrant and dedicated real estate agent who's passion for helping clients find their dream homes extends beyond the transaction. Madison provides individualized advice and in-depth knowledge to make every property search seamless and enjoyable</p>
+    </div>
+    <div>
+        <p align="left">Meet Madison Vance, a vibrant and dedicated real estate agent whose passion for helping clients find their dream homes extends beyond the transaction. Madison provides individualized advice and in-depth knowledge to make every property search seamless and enjoyable</p>
+    <p></p>
             <p align="left"><b>Contact Information  </b></p>
+            <p align="left"><b>Email Adress: MadisonV@iyr.cm </b></p>
             <p align="left"><b>Phone: 402-123-4567 </b></p>
             <p align="left"><b>Contact Adress: 1414 Marbee drive Omaha, NE 68124 </b></p>
-           <class= ".button"
-            <a href="mailto:valodeamirzac@gmail.com" class="button">Click to contact Madison Vance</a>
-    > </id>
+            <a href="valodeamirzac@gmail.com">
+                <button class="button">CLICK TO CONTACT<BR /> MADISON VANCE</button>
+            </a>
+
+     </class>
     </div>
+
 </body>
+
 </html>
 
 </blockquote>
