ISQA8210 || Add Images in details page & Automation Test cases || NKODURU

--- a/listings/templates/listing_detail.html
+++ b/listings/templates/listing_detail.html
@@ -20,11 +20,11 @@
             <img style="height: 260px;width: 100%" src="../media/{{ img }}" alt="image">
         </div>
           <div class="col-md-3 mb-3">
-            <img style="height: 260px;width: 100%" src="../media/{{ img }}" alt="image">
+            <img style="height: 260px;width: 100%" src="../static/images/property_images/kithcen1.jpg" alt="image">
         </div>  <div class="col-md-3 mb-3">
-            <img style="height: 260px;width: 100%" src="../media/{{ img }}" alt="image">
+            <img style="height: 260px;width: 100%" src="../static/images/property_images/room.jpg" alt="image">
         </div>  <div class="col-md-3 mb-3">
-            <img style="height: 260px;width: 100%" src="../media/{{ img }}" alt="image">
+            <img style="height: 260px;width: 100%" src="../static/images/property_images/washroom.jpg" alt="image">
         </div>
     {% endfor %}
 </div>
