--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             </button>
           </form> 
           <form action="/listings/upload/" method="get">
-            <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+            <button type="submit" class="btn btn-light" id="upload_listing_btn" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
               Upload listing
             </button>
           </form> 
@@ -35,7 +35,7 @@
         {% else %}
         <div class="d-flex align-items-center" style="margin-left: auto">
           <form action="/accounts/login" method="get">
-              <button type="submit" class="btn btn-light" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
+              <button type="submit" class="btn btn-light" id="login_btn" style="padding: 2px 5px 2px 5px; font-size: .8rem; margin-right: 8px;">
               Login
               </button>
           </form> 
